[package]
name = "filex"
version = "0.1.0"
authors = ["Wayne Stewart <waynegaidin@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = "0.3.*"
fontdue = "0.3.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser","libloaderapi","windowsx","winbase"] }